--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -1,12 +1,10 @@
 # A9: Main accesses to the database and transactions
- 
+
 ## 1. Main Accesses
 
 ## M01: Authentication and Individual Profile
- 
-> Main accesses to the database.
- 
 
+> Main accesses to the database.
 
 <table>
 <tr>
@@ -17,19 +15,14 @@
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R103</a></td>
 </tr>
-<tr>
-<td colspan='2'>
-  
- ```SQL
-insert into usertable (username, password, email, premium, banned, 
-name, gender, address, institution, description, birthDate, idCountry) 
-values ($username, $password, $email, FALSE, FALSE, $name, $gender, 
-$address, $institution, $description, $birthDate, $idCountry)
-``` 
-</td>
-</tr>
 </table>
 
+ ```SQL
+insert into usertable (username, password, email, premium, banned,
+name, gender, address, institution, description, birthDate, idCountry)
+values ($username, $password, $email, FALSE, FALSE, $name, $gender,
+$address, $institution, $description, $birthDate, $idCountry)
+```
 
 ## M02: Dashboard
 
@@ -42,18 +35,14 @@ $address, $institution, $description, $birthDate, $idCountry)
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r202-view-projects">R202</a></td>
 </tr>
-<tr>
-<td colspan='2'>
+</table>
 
 ```SQL
 select * from project, usertable, joined
-where usertable.idUser = $idUser 
-AND usertable.idUser = joined.idUser 
+where usertable.idUser = $idUser
+AND usertable.idUser = joined.idUser
 AND joined.idProject = project.idProject;
 ```
-</td>
-</tr>
-</table>
 
 <table>
 <tr>
@@ -64,19 +53,14 @@ AND joined.idProject = project.idProject;
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r203-view-tasks">R203</a></td>
 </tr>
-<tr>
-<td colspan='2'>
+</table>
 
 ```SQL
 select * from tasks, usertable, assigned
-where usertable.idUser = $idUser 
-AND assigned.idUser = usertable.idUser 
+where usertable.idUser = $idUser
+AND assigned.idUser = usertable.idUser
 AND task.idTask = assigned.idTask;
 ```
-</td>
-</tr>
-</table>
-
 
 ## M03: Projects and Project Settings
 
@@ -89,17 +73,12 @@ AND task.idTask = assigned.idTask;
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r305-create-project-action">R305</a></td>
 </tr>
-<tr>
-<td colspan='2'>
-
-```SQL
-insert into project (creationDate, name, description, private) 
-values ($creationDate, $name, $description, false);
-```
-</td>
-</tr>
 </table>
 
+```SQL
+insert into project (creationDate, name, description, private)
+values ($creationDate, $name, $description, false);
+```
 
 <table>
 <tr>
@@ -110,17 +89,12 @@ values ($creationDate, $name, $description, false);
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r306-view-project-members">R306</a></td>
 </tr>
-<tr>
-<td colspan='2'>
-  
+</table>
+
 ```SQL
 select * from usertable, project where deadline > CURRENT_DATE and idProject = $idProject
 order by deadline asc;
-```  
-</td>
-</tr>
-</table>
-
+```
 
 <table>
 <tr>
@@ -131,16 +105,12 @@ order by deadline asc;
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks">R301</a></td>
 </tr>
-<tr>
-<td colspan='2'>
+</table>
 
 ```SQL
 select * from usertable, project where deadline > CURRENT_DATE and idProject = $idProject
 order by deadline asc;
 ```
-</td>
-</tr>
-</table>
 
 <table>
 <tr>
@@ -151,15 +121,11 @@ order by deadline asc;
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
 </tr>
-<tr>
-<td colspan='2'></td>
-  
+</table>
+
 ```SQL
 select description from project where idProject = $idProject
 ```
-</tr>
-</table>
-
 
 <table>
 <tr>
@@ -170,18 +136,13 @@ select description from project where idProject = $idProject
 <th>Web Resource</th>
 <td><a "https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r307-delete-project-member">R307</a></td>
 </tr>
-<tr>
-<td colspan='2'>
-
-```SQL
-delete from joined 
-where idUser = $idUser 
-AND idProject = $idProject;
-```
-</td>
-</tr>
 </table>
 
+```SQL
+delete from joined
+where idUser = $idUser
+AND idProject = $idProject;
+```
 
 <table>
 <tr>
@@ -192,18 +153,13 @@ AND idProject = $idProject;
 <th>Web Resource</th>
 <td><a "https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r309-edit-project-members-action">R309</a></td>
 </tr>
-<tr>
-<td colspan='2'>
+</table>
 
 ```SQL
 update joined
 set role = $role
 where idUser = $idUser AND idProject = $idProject
 ```
-</td>
-</tr>
-</table>
-
 
 <table>
 <tr>
@@ -214,17 +170,12 @@ where idUser = $idUser AND idProject = $idProject
 <th>Web Resource</th>
 <td><a  **TODO** </a></td>
 </tr>
-<tr>
-<td colspan='2'>
-  
+</table>
+
 ```SQL
 insert into joined (idUser, idProject, joinedDate, role)
 values ($idUser, $idProject, $joinedDate, $role)
-```  
-</td>
-</tr>
-</table>
-
+```
 
 <table>
 <tr>
@@ -235,17 +186,12 @@ values ($idUser, $idProject, $joinedDate, $role)
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r302-view-project-forum">R302</a></td>
 </tr>
-<tr>
-<td colspan='2'>
- 
+</table>
+
 ```SQL
 select * from forumpost where idProject = $idProject
 order by lastEditDate asc;
-``` 
-</td>
-</tr>
-</table>
-
+```
 
 <table>
 <tr>
@@ -256,18 +202,14 @@ order by lastEditDate asc;
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r311-create-project-task-action">R311</a></td>
 </tr>
-<tr>
-<td colspan='2'>
-  
+</table>
+
 ```SQL
-insert into task (creationDate, lastEditDate, title, description, 
+insert into task (creationDate, lastEditDate, title, description,
 deadline, completed, completetionDate, idUser, idProject)
 values ($date, $date, $title, $description, $deadline,
 FALSE, NULL, $idUser, $idProject)
-```  
-</td>
-</tr>
-</table>
+```
 
 
 <table>
@@ -279,17 +221,12 @@ FALSE, NULL, $idUser, $idProject)
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-delete-project-task">R312</a></td>
 </tr>
-<tr>
-<td colspan='2'>
- 
-```SQL
-delete from tasks 
-where idTask = $idTask;
-``` 
-</td>
-</tr>
 </table>
 
+```SQL
+delete from tasks
+where idTask = $idTask;
+```
 
 <table>
 <tr>
@@ -300,17 +237,13 @@ where idTask = $idTask;
 <th>Web Resource</th>
 <td><a  **TODO** </a></td>
 </tr>
-<tr>
-<td colspan='2'>
-  
+</table>
+
 ```SQL
-insert into forumpost (creationDate, lastEditDate, 
-title, content, idProject, idUser) 
+insert into forumpost (creationDate, lastEditDate,
+title, content, idProject, idUser)
 values ($date, $date, $title, $content, $idProject, $idUser);
 ```
-</td>
-</tr>
-</table>
 
 <table>
 <tr>
@@ -321,16 +254,12 @@ values ($date, $date, $title, $content, $idProject, $idUser);
 <th>Web Resource</th>
 <td><a  **TODO** </a></td>
 </tr>
-<tr>
-<td colspan='2'>
- 
+</table>
+
 ```SQL
 select * from reply where reply.idPost = $idPost
 order by creationDate asc;
-``` 
-</td>
-</tr>
-</table>
+```
 
 
 <table>
@@ -342,18 +271,13 @@ order by creationDate asc;
 <th>Web Resource</th>
 <td><a </a></td>
 </tr>
-<tr>
-<td colspan='2'>
-  
-```SQL
-insert into forumpost (creationDate, lastEditDate, 
-title, content, idProject, idUser) 
-values ($date, $date, $title, $content, $idProject, $idUser);
-```  
-</td>
-</tr>
 </table>
 
+```SQL
+insert into forumpost (creationDate, lastEditDate,
+title, content, idProject, idUser)
+values ($date, $date, $title, $content, $idProject, $idUser);
+```
 
 <table>
 <tr>
@@ -364,18 +288,13 @@ values ($date, $date, $title, $content, $idProject, $idUser);
 <th>Web Resource</th>
 <td><a </a></td>
 </tr>
-<tr>
-<td colspan='2'>
+</table>
 
 ```SQL
 update forumpost
-set content = $content 
+set content = $content
 where idPost = $idPost;
-``` 
-</td>
-</tr>
-</table>
-
+```
 
 <table>
 <tr>
@@ -386,20 +305,14 @@ where idPost = $idPost;
 <th>Web Resource</th>
 <td><a **TODO**</a></td>
 </tr>
-<tr>
-<td colspan='2'>
-
-```SQL
-update task set completed = true 
-where idTask = $idTask;
-```
-</td>
-</tr>
 </table>
 
+```SQL
+update task set completed = true
+where idTask = $idTask;
+```
 
 ## M04: Search Engine
-
 
 <table>
 <tr>
@@ -410,53 +323,44 @@ where idTask = $idTask;
 <th>Web Resource</th>
 <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-searched-projects">R401</a></td>
 </tr>
-<tr>
-<td colspan='2'>
+</table>
 
 ```SQL
 select name from project where idProject = $idProject
-``` 
+```
+
+***
+## 2. Transactions
+
+> Transactions needed to assure the integrity of the data.
+
+<table>
+<tr>
+<th>T01</th>
+<td></td>
+</tr>
+<tr>
+<th>Isolation level</th>
+<td></td>
+</tr>
+<tr>
+<th>Justification</th>
+<td></td>
+</tr>
+<tr>
+<td colspan='2'>
+ ```SQL
+
+```
 </td>
 </tr>
 </table>
 
-
-
-...
-## 2. Transactions
-
-> Transactions needed to assure the integrity of the data.
- 
-<table>
-<tr>
-<th>T01</th>
-<td>**TODO**</td>
-</tr>
-<tr>
-<th>Isolation Level</th>
-<td>**TODO**</td>
-</tr>
-<tr>
-<th>Justification</th>
-<td>**TODO**</td>
-</tr>
-</table>
-```SQL
-**TODO**
-```
- 
-| SQL Reference   | Transaction Name                    |
-| --------------- | ----------------------------------- |
-| Justification   | Justification for the transaction.  |
-| Isolation level | Isolation level of the transaction. |
-| `Complete SQL Code`                                   |
- 
-...
- 
-
+<!--
+***
 ## Revision history
 
-<!-- Changes made to the first submission:
+ Changes made to the first submission:
 1. Item 1
 1. Item 2 -->
 
