--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -323,20 +323,62 @@ values ($date, $date, $title, $content, $idProject, $idUser);
 <table>
 <tr>
 <th>T01</th>
-<td></td>
+<td>Remove a user</td>
 </tr>
 <tr>
 <th>Isolation level</th>
-<td></td>
+<td>Repeatable Read</td>
 </tr>
 <tr>
 <th>Justification</th>
-<td></td>
+<td>The Repeatable Read isolation level only sees data committed before the transaction began; it never sees either uncommitted data or changes committed during transaction execution by concurrent transactions.</td>
 </tr>
 <tr>
 <td colspan='2'>
- ```SQL
 
+```SQL
+BEGIN TRANSACTION;
+SET TRANSACTION ISOLATION LEVEL REPEATABLE READ 
+ 
+-- Delete project
+ DELETE FROM Project WHERE
+ $idProject = Project.idProject;
+ 
+-- Delete joined 
+ DELETE FROM Joined
+ WHERE $idProject = Joined.idProject;
+
+-- Delete removed project's tasks
+DELETE FROM Tasks
+ WHERE $idProject = Task.idProject;
+
+-- Delete removed project's tasks comments
+DELETE FROM Comment 
+WHERE idTask 
+IN(SELECT idTask 
+    FROM Task 
+    WHERE Task.idProject = $idProject);
+
+-- Delete removed project's tasks tags 
+DELETE FROM Tag
+WHERE idTag 
+IN (SELECT idTag 
+    FROM Tagged 
+    WHERE idTask 
+    IN(SELECT idTask 
+        FROM Task 
+        WHERE Task.idProject = $idProject)
+        );
+
+-- Delete tagged
+
+DELETE FROM Tagged 
+WHERE idTask 
+IN (SELECT idProject 
+    FROM Task 
+    WHERE Task.idProject = $idProject);
+
+COMMIT;
 ```
 </td>
 </tr>
