--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -338,47 +338,83 @@ values ($date, $date, $title, $content, $idProject, $idUser);
 
 ```SQL
 BEGIN TRANSACTION;
-SET TRANSACTION ISOLATION LEVEL REPEATABLE READ 
- 
--- Delete project
- DELETE FROM Project WHERE
- $idProject = Project.idProject;
- 
--- Delete joined 
- DELETE FROM Joined
- WHERE $idProject = Joined.idProject;
+SET TRANSACTION ISOLATION LEVEL REPEATABLE READ;
 
--- Delete removed project's tasks
-DELETE FROM Tasks
- WHERE $idProject = Task.idProject;
+ -- Delete tagged
 
--- Delete removed project's tasks comments
-DELETE FROM Comment 
-WHERE idTask 
-IN(SELECT idTask 
-    FROM Task 
+DELETE FROM Tagged
+WHERE idTask
+IN (SELECT idProject
+    FROM Task
     WHERE Task.idProject = $idProject);
 
--- Delete removed project's tasks tags 
+
+-- Delete removed project's tasks tags
 DELETE FROM Tag
-WHERE idTag 
-IN (SELECT idTag 
-    FROM Tagged 
-    WHERE idTask 
-    IN(SELECT idTask 
-        FROM Task 
+WHERE idTag
+IN (SELECT idTag
+    FROM Tagged
+    WHERE idTask
+    IN(SELECT idTask
+        FROM Task
         WHERE Task.idProject = $idProject)
         );
 
--- Delete tagged
-
-DELETE FROM Tagged 
-WHERE idTask 
-IN (SELECT idProject 
-    FROM Task 
+-- Delete removed project's tasks comments
+DELETE FROM Comment
+WHERE idTask
+IN(SELECT idTask
+    FROM Task
     WHERE Task.idProject = $idProject);
 
+--Delete assigned
+DELETE FROM Assigned
+WHERE idTask
+IN (SELECT idTask
+    FROM Task
+    WHERE Task.idProject = $idProject);
+
+-- Delete task edit date history
+DELETE FROM EditTaskInfo
+WHERE idTask
+IN(SELECT idTask
+  	FROM Task
+  	WHERE Task.idProject = $idProject);
+
+-- Delete task request
+DELETE FROM CloseRequest
+WHERE idTask
+IN(SELECT idTask
+  	FROM Task
+  	WHERE Task.idProject = $idProject);
+
+-- Delete removed project's tasks
+DELETE FROM Task
+WHERE Task.idProject = $idProject;
+
+-- Delete joined
+ DELETE FROM Joined
+ WHERE Joined.idProject = $idProject;
+
+-- Delete project forumpost replies
+DELETE FROM Reply
+WHERE idPost
+IN(SELECT idPost
+  	FROM ForumPost
+  	WHERE ForumPost.idProject = $idProject);
+
+
+-- Delete project forumpost
+DELETE FROM ForumPost
+WHERE ForumPost.idProject = $idProject;
+
+
+-- Delete project
+ DELETE FROM Project WHERE
+ Project.idProject = $idProject;
+
 COMMIT;
+
 ```
 </td>
 </tr>
