--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -323,7 +323,7 @@ values ($date, $date, $title, $content, $idProject, $idUser);
 <table>
 <tr>
 <th>T01</th>
-<td>Remove a user</td>
+<td>Remove a Project</td>
 </tr>
 <tr>
 <th>Isolation level</th>
@@ -412,6 +412,53 @@ WHERE ForumPost.idProject = $idProject;
 -- Delete project
  DELETE FROM Project WHERE
  Project.idProject = $idProject;
+
+COMMIT;
+
+```
+</td>
+</tr>
+</table>
+
+<table>
+<tr>
+<th>T02</th>
+<td>Remove a Tag</td>
+</tr>
+<tr>
+<th>Isolation level</th>
+<td>Repeatable Read</td>
+</tr>
+<tr>
+<th>Justification</th>
+<td>The Repeatable Read isolation level only sees data committed before the transaction began; it never sees either uncommitted data or changes committed during transaction execution by concurrent transactions.</td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+BEGIN TRANSACTION;
+SET TRANSACTION ISOLATION LEVEL REPEATABLE READ;
+
+ -- Delete tagged
+
+DELETE FROM Tagged
+WHERE idTask
+IN (SELECT idProject
+    FROM Task
+    WHERE Task.idProject = $idProject);
+
+
+-- Delete tag
+DELETE FROM Tag
+WHERE idTag
+IN (SELECT idTag
+    FROM Tagged
+    WHERE idTask
+    IN(SELECT idTask
+        FROM Task
+        WHERE Task.idProject = $idProject)
+        );
 
 COMMIT;
 
