Working on delete account US :construction:

--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -73,26 +73,32 @@
 | US 1          | US Name | Mandatory; Important; Optional | John Silva, Ana Sousa ...  |  100%  |
 | US 2          | US Name | Mandatory; Important; Optional | John Silva                 |   75%  |
 
-| US01 | Log in | high | As a Visitor, I want to authenticate into the system, so that I can access privileged information.  |
-| US02 | Register | high | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.  |
-| US03 | Log in using OAUTH | high | As a Visitor, I want to authenticate into the system using a third party account.|
-| US04 | Home Page | high | As a User, I want to access the home page, so that I can see a brief website's description.  |
-| US05 | About page | low | As a User, I want to access about page, so that I can see the complete information about the website. |
-| US06 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
-| US07 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
-| US08 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
-| US09 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project.|
-| US10 | Search Users | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
-| US11 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
-| US12 | Edit profile | high | As an Authenticated User, I want to change my personal information, so that I can keep it updated (e.g. changing the password).|
-| US13 | Create project | high | As an Authenticated User, I want to be able to create a project, so that I can use the website service.|
-| US14 | Access Dashboard | high | As an Authenticated User, I want to be able to access my dashboard, so that I can inform myself on relevant recent activity.|
-| US15 | View my projects | high | As an Authenticated I want to have a page where i can see all my projects, so that I can better access them.|
-| US16 | Statistics | low | As an Authenticated User, I want to check usage statistics (for example how many tasks I've marked as closed for a given project), so that I can stay informed.|
-| US17 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
-| US18 | Delete account | low | As a Authenticated User, I want to be delete my account, so that my information is no longer stored by the website.|
-| US19 | Create private projects | high | As an Authenticated Premium User, I want to be able to create private projects, so that only I or the project's team members can access and edit it.|
-| US20 | Search tasks | high | As a project member, I want to search through the different tasks, so that i can find one that is best suited for me.|
+<!-- Visitor -->
+| US01 | Log In | high |  | 100% |
+| US02 | Register | high |  | 80%  |
+
+<!-- User -->
+| US04 | Home Page | high |  | 100%  |
+| US05 | About Page | low |  | 100% |
+| US06 | FAQ Page | medium |  | 100% |
+| US07 | Contact Page | medium |  | 60% |
+| US08 | Search Projects | high |  |  50 % |
+| US09 | View Project | high | | 50% |
+| US10 | Search Users | high | | 100% |
+| US20 | Search Tasks | high | | 50% |
+| US11 | View Profiles | high | | 100% |
+
+<!-- Authenticated User -->
+| US12 | Edit Profile | high | | 90 %|
+| US13 | Create Project | high | | 0% |
+| US14 | Access Dashboard | high | 20% |
+| US15 | View My Projects | high | 100% |
+| US16 | Statistics | low | | 0%|
+| US17 | Log Out | high |  | 100% |
+| US18 | Delete Account | low | | 50% |
+| US19 | Create Private Projects | high | 0% |
+
+
 | US21 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
 | US22 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
 | US23 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
@@ -113,6 +119,8 @@
 | US38 | Delete Post | medium | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
 | US39 | Delete Reply | medium | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
 | US40 | Manage project member's | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
+
+
 | US41 | Edit Project description | low | As a project manager, I want to edit the project description, so that it becomes clearer what is the project direction.|
 | US42 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
 | US43 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
