--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -99,29 +99,29 @@
 | US19 | Create Private Projects | high | 0% |
 
 
-| US21 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
-| US22 | Create Task | high | As a project member, I want to be able to add a task to the task list, so that we can keep improving the project.|
-| US23 | Edit My Tasks | high | As a project member, I want to edit a task to the task list, so that I can better convey what is needed.|
-| US24 | Assign to My Tasks | medium | As a project member, I want to assign a project member to a task that I've created, so that he can help complete it.|
-| US25 | Commentate Task | medium | As a project member, I want to be able to comment a task, so that i can provide my insight.|
-| US26 | Mark Task as Completed | medium | As a project member, I want to mark a task as completed, so that no one "wastes" their time doing it and by doing so also allow the project manager's to close it.|
-| US27 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
-| US28 | Create Post | high | As a project member, I want to create a post in the forum, so that I can discuss a part of the project.|
-| US29 | Reply to Post | high | As a project member, I want to reply to a post in the forum, so that I can give my opinion on a part of the project.|
-| US30 | Leave Project | medium | As a project member, I want to leave a project, so that I can stop my participation if I so desire.|
-| US31 | Close Task | medium | As a project manager, I want to be able to fully close tasks that have been marked as completed, so that they don't clutter the task list.|
-| US32 | Create Task Tags | medium | As a project manager, I want to create a tag for tasks, so that the task list remains organized.|
-| US33 | Delete Task Tags | medium | As a project manager, I want to delete an available tag, so that the task list remains organized.|
-| US34 | Edit Tasks | high | As a project manager, I want to edit a task, so that i can better convey what is needed.|
-| US35 | Delete Task | medium | As a project manager, I want to delete a task, so that i can keep the task list clutter free.|
-| US36 | Delete Task Comment | medium | As a project manager, I want to delete a task comment, so that it doesn't generate irrelevant discussion.|
-| US37 | Assign to Task | medium | As a project manager, I want to assign a project member to a task, so that he can help complete it.|
-| US38 | Delete Post | medium | As a project manager, I want to delete a post from the forum, so that it doesn't generate irrelevant discussion.|
-| US39 | Delete Reply | medium | As a project manager, I want to delete a reply to a post, so that it doesn't clutter the post with irrelevant discussion.|
-| US40 | Manage project member's | medium | As a project manager, I want to be able to add & remove project members, so that they can contribute to our project.|
+| US21 | View Task | high | | 100% |
+| US22 | Create Task | high | | 0%|
+| US23 | Edit My Tasks | high | | 50% |
+| US24 | Assign to My Tasks | medium | | 50% |
+| US25 | Commentate Task | medium | | 0% |
+| US26 | Mark Task as Completed | medium | | 0% |
+| US27 | View Forum | high | | 10% |
+| US28 | Create Post | high | | 0%|
+| US29 | Reply to Post | high | | 0% |
+| US30 | Leave Project | medium | | 0%|
+| US31 | Close Task | medium | | 0%|
+| US32 | Create Task Tags | medium | | 0% |
+| US33 | Delete Task Tags | medium | | 0% |
+| US34 | Edit Tasks | high | | 20% |
+| US35 | Delete Task | medium | | 0% |
+| US36 | Delete Task Comment | medium | | 0% |
+| US37 | Assign to Task | medium | | 0%|
+| US38 | Delete Post | medium | | 0%|
+| US39 | Delete Reply | medium | | 0% |
+| US40 | Manage project member's | medium | | 0%|
 
 
-| US41 | Edit Project description | low | As a project manager, I want to edit the project description, so that it becomes clearer what is the project direction.|
+| US41 | Edit Project description | low | | 100% |
 | US42 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
 | US43 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
 | US44 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
