--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -84,13 +84,13 @@
 | US08 | Search Projects | high |  |  60 % |
 | US09 | View Project | high | | 50% |
 | US20 | Search Tasks | high | | 50% |
-| US12 | Edit Profile | high | | 90 %|
-| US13 | Create Project | high | | 90% |
+| US12 | Edit Profile | high | | 100 %|
+| US13 | Create Project | high | | 100% |
 | US14 | Access Dashboard | high | | 20% |
 | US18 | Delete Account | low | | 50% |
 | US22 | Create Task | high | | 0%|
 | US24 | Assign to My Tasks | medium | | 50% |
-| US25 | Commentate Task | medium | | 0% |
+| US25 | Comment Task | medium | | 0% |
 | US26 | Mark Task as Completed | medium | | 0% |
 | US30 | Leave Project | medium | | 0%|
 | US31 | Close Task | medium | | 0%|
