Separated done US from unfinished

--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -65,49 +65,33 @@
 
 ### 8.2 User Stories
 
-> Detail the status of the implementation of each user story.
-> Also include the new user stories that were created during the project.
-
-| US Identifier | Name    | Priority                       | Team members               | State  |
-| ------------- | ------- | ------------------------------ | -------------------------- | ------ |
-| US 1          | US Name | Mandatory; Important; Optional | John Silva, Ana Sousa ...  |  100%  |
-| US 2          | US Name | Mandatory; Important; Optional | John Silva                 |   75%  |
-
-<!-- Visitor -->
-| US01 | Log In | high |  | 100% |
-| US02 | Register | high |  | 80%  |
-
-<!-- User -->
+| US01 | Log In | high | Bernardo | 100% |
+| US02 | Register | high |  | 100%  |
 | US04 | Home Page | high |  | 100%  |
 | US05 | About Page | low |  | 100% |
 | US06 | FAQ Page | medium |  | 100% |
 | US07 | Contact Page | medium |  | 100% |
+| US11 | View Profiles | high | | 100% |
+| US10 | Search Users | high | | 100% |
+| US15 | View My Projects | high | | 100% |
+| US17 | Log Out | high |  | 100% |
+| US19 | Create Private Projects | high | | 100% |
+| US21 | View Task | high | | 100% |
+| US41 | Edit Project description | low | | 100% |
+| US23 | Edit My Tasks | high | | 100% |
+
+
 | US08 | Search Projects | high |  |  60 % |
 | US09 | View Project | high | | 50% |
-| US10 | Search Users | high | | 100% |
 | US20 | Search Tasks | high | | 50% |
-| US11 | View Profiles | high | | 100% |
-
-<!-- Authenticated User -->
 | US12 | Edit Profile | high | | 90 %|
 | US13 | Create Project | high | | 90% |
-| US14 | Access Dashboard | high | 20% |
-| US15 | View My Projects | high | 100% |
-| US16 | Statistics | low | | 0%|
-| US17 | Log Out | high |  | 100% |
+| US14 | Access Dashboard | high | | 20% |
 | US18 | Delete Account | low | | 50% |
-| US19 | Create Private Projects | high | 100% |
-
-
-| US21 | View Task | high | | 100% |
 | US22 | Create Task | high | | 0%|
-| US23 | Edit My Tasks | high | | 70% |
 | US24 | Assign to My Tasks | medium | | 50% |
 | US25 | Commentate Task | medium | | 0% |
 | US26 | Mark Task as Completed | medium | | 0% |
-| US27 | View Forum | high | | 10% |
-| US28 | Create Post | high | | 0%|
-| US29 | Reply to Post | high | | 0% |
 | US30 | Leave Project | medium | | 0%|
 | US31 | Close Task | medium | | 0%|
 | US32 | Create Task Tags | medium | | 0% |
@@ -116,12 +100,9 @@
 | US35 | Delete Task | medium | | 0% |
 | US36 | Delete Task Comment | medium | | 0% |
 | US37 | Assign to Task | medium | | 0%|
-| US38 | Delete Post | medium | | 0%|
-| US39 | Delete Reply | medium | | 0% |
-| US40 | Manage project member's | medium | | 0%|
+| US40 | Manage project member's | medium | | 50%|
 
 
-| US41 | Edit Project description | low | | 100% |
 | US42 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
 | US43 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
 | US44 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
@@ -136,6 +117,11 @@
 | US53 | Maintenance     | low | As a Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and features.|
 | US54| General Messages| low | As a Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
 
+| US27 | View Forum | high | | 10% |
+| US28 | Create Post | high | | 0%|
+| US29 | Reply to Post | high | | 0% |
+| US38 | Delete Post | medium | | 0%|
+| US39 | Delete Reply | medium | | 0% |
 
 ***
 
