delete Project US :zap:

--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -85,6 +85,9 @@
 | US35 | Delete Task | medium | | 100% |
 | US13 | Create Project | high | | 100% |
 | US36 | Delete Task Comment | medium | | 100% |
+| US22 | Create Task | high | | 100%|
+
+| US26 | Mark Task as Completed | medium | | 50% |
 
 | US09 | View Project | high | | 50% |
 
@@ -93,14 +96,14 @@
 
 | US12 | Edit Profile | high | | 95 %|
 
-| US44 | Delete project | low | As a project owner, I want to be able to delete a project, so that a dead project no longer shows up in my projects.|
+| US44 | Delete project | low | | 0% |
 | US14 | Access Dashboard | high | | 20% |
-| US22 | Create Task | high | | 100%|
+
 | US24 | Assign to My Tasks | medium | | 50% |
 | US25 | Comment Task | medium | | 95% |
-| US26 | Mark Task as Completed | medium | | 100% |
+
 | US30 | Leave Project | medium | | 90%|
-| US31 | Close Task | medium | | 100%|
+| US31 | Close Task | medium | | 50%|
 | US34 | Edit Tasks | high | | 90% |
 | US37 | Assign to Task | medium | | 90%|
 | US40 | Manage project member's | medium | | 50%|
