Project Manage Users :muscle: :zap: Project and Dashboard Menu :gem:

--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -103,15 +103,15 @@
 | US24 | Assign to My Tasks | medium | | 50% |
 | US25 | Comment Task | medium | | 95% |
 
-| US30 | Leave Project | medium | | 90%|
+| US30 | Leave Project | medium | | 70%|
 | US31 | Close Task | medium | | 50%|
 | US34 | Edit Tasks | high | | 90% |
 | US37 | Assign to Task | medium | | 90%|
-| US40 | Manage project member's | medium | | 50%|
 
+| US40 | Manage project member's | medium | | 100%|
+| US42 | Transfer Ownership | medium | | 100%|
+| US43 | Manage project administrators| medium | | 100%|
 
-| US42 | Transfer Ownership | medium | As a project owner, I want to be able to transfer ownership of a project, so that I am no longer burdened by it.|
-| US43 | Manage project administrators| medium | As a project owner, I want to be able to add & remove project administrators, so that they can help me delegate and moderate the project.|
 | US45 | Administration Page | high | As a Website Administrator, I want to be able to access a Administration Page, so that i can better access tools to moderate the website.|
 | US46 | Search Projects | high | As a Website Administrator, I want to search all the projects (public and private), so that I can moderate all the information.|
 | US47 | Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
