register :zap: some project restrictions :construction:

--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -17,13 +17,13 @@
 
 | Username | Password |
 | -------- | -------- |
-| admin    | password |
+| up201503477@fe.up.pt    | lbaw2018 |
 
 ### 2.2. User Credentials
 
 | Type          | Username  | Password |
 | ------------- | --------- | -------- |
-| basic account | pputman0@usnews.com    | PHreK9plUZ8 |
+| premium account with private project | pputman0@usnews.com    | PHreK9plUZ8 |
 
 
 ## 3. Application Help
