:hammer: refactoring :hammer:

--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -112,16 +112,16 @@
 | US42 | Transfer Ownership | medium | | 100%|
 | US43 | Manage project administrators| medium | | 100%|
 
-| US45 | Administration Page | high | As a Website Administrator, I want to be able to access a Administration Page, so that i can better access tools to moderate the website.|
-| US46 | Search Projects | high | As a Website Administrator, I want to search all the projects (public and private), so that I can moderate all the information.|
-| US47 | Delete Projects | high | As a Website Administrator, I want to delete projects with inappropriate content, so that I can moderate all the information.|
-| US48 | Remove Comments | high | As a Website Administrator, I want to remove comments with inappropriate content/expressions, so that I can moderate all the texts.|
-| US49 | Search Users | high | As a Website Administrator, I want to be able to perform extensive User searches, so that I can better moderate the website.|
-| US50 | View Profile | high | As a Website Administrator, I want to be able to visit a page with a user's detailed information, so that I can better moderate the website.|
-| US51 | Promote User     | high | As a Website Administrator, I want to promote a regular user to a premium one, so that he can access restricted website features.|
-| US52 | Ban User        | high | As a Website Administrator, I want to record the inactivity of a system user, so that he can't longer access restricted contents of the site.|
-| US53 | Maintenance     | low | As a Website Administrator, I want to be able to interrupt all activity to maintenance purposes, so that I can improve website design and features.|
-| US54| General Messages| low | As a Website Administrator, I want to send messages to all users, so that I can notify about maintenance or server down.|
+| US45 | Administration Page | high | | 100%|
+| US46 | Search Projects | high | | 0%|
+| US47 | Delete Projects | high | | 100%|
+| US48 | Remove Comments | high | | 0%|
+| US49 | Search Users | high | | 0%|
+| US50 | View Profile | high | | 100%|
+| US51 | Promote User | high | | 100%|
+| US52 | Ban User     | high | | 100%|
+| US53 | Maintenance  | low |  | 0%|
+| US54| General Messages| low | | 0%|
 
 | US27 | View Forum | high | | 10% |
 | US28 | Create Post | high | | 0%|
