fix task bugs :bug: A10 2.2 :pencil2:

--- a/artifacts/A10/A10.md
+++ b/artifacts/A10/A10.md
@@ -23,7 +23,12 @@
 
 | Type          | Username  | Password |
 | ------------- | --------- | -------- |
-| premium account with private project | pputman0@usnews.com    | PHreK9plUZ8 |
+| premium account with private project (Owner) | pputman0@usnews.com | PHreK9plUZ8 |
+| account with private project (Manager) | kmcritchie5@ed.gov | ZZzD5chsNR |
+| account with private project (Member) | dscranneyf@narod.ru | ZasqJSdgH2 |
+| account with public project (Owner) | pfiggs2@google.com.br | jFY5qeZeAT0C |
+| account with public project (Manager) | lsoles7@admin.ch | DODIswuA |
+| account with public project (Member) | ccrinageh@yellowbook.com | zy5pNl2rC |
 
 
 ## 3. Application Help
@@ -97,13 +102,12 @@
 
 | US12 | Edit Profile | high | | 100 %|
 
-
 | US14 | Access Dashboard | high | | 50% |
 
 | US24 | Assign to My Tasks | medium | | 100% |
 | US25 | Comment Task | medium | | 100% |
 
-| US30 | Leave Project | medium | | 70%|
+| US30 | Leave Project | medium | | 100%|
 | US31 | Close Task | medium | | 100%|
 | US34 | Edit Tasks | high | | 100% |
 | US37 | Assign to Task | medium | | 100%|
